--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,6 +28,21 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Install python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.9
+
+      - name: Install python poetry
+        uses: abatilo/actions-poetry@v2.1.6
+
+      - name: Install poetry dev dependencies
+        run: poetry install --with dev
+
+      - name: Run pylama
+        run: poetry run pylama
+
+
       - name: Log in to the Container registry
         uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
         with:
