--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,8 @@ main = "f1_schedule_telegram_bot.main:main"
 issues = "https://github.com/Fastjur/F1ScheduleTelegramBot/issues"
 
 [tool.pylama]
-linters = "pycodestyle,pydocstyle,pyflakes,mccabe,pylint,radon,mypy,vulture"
+# linters = "pycodestyle,pydocstyle,pyflakes,mccabe,pylint,radon,mypy,vulture"
+linters = "pycodestyle,pyflakes,mccabe,pylint,radon,mypy,vulture"
 ignore = "D202,D203,D212,W1203"
 
 [tool.vulture]
