--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,12 +11,14 @@ packages = [
 repository = "https://github.com/Fastjur/F1ScheduleTelegramBot"
 
 [tool.poetry.dependencies]
-python = "^3.8.1"
+python = "^3.10.6"
 python-dotenv = "^1.0.0"
 python-telegram-bot = {extras = ["job-queue"], version = "^20.2"}
 requests = "^2.29.0"
 ics = "^0.7.2"
 arrow = "^1.2.3"
+ergast-py = "^0.7.0"
+prettytable = "^3.7.0"
 
 
 [tool.poetry.group.dev.dependencies]
