--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ ics = "^0.7.2"
 arrow = "^1.2.3"
 ergast-py = "^0.7.0"
 prettytable = "^3.7.0"
+humanize = "^4.6.0"
 
 
 [tool.poetry.group.dev.dependencies]
