--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ types-requests = "^2.30.0.0"
 # Lock pydocstyle to a version lower than 6.2, otherwise the build errors
 # https://github.com/klen/pylama/issues/232
 pydocstyle = "^6.0.0, <6.2.0"
+pytest-bdd = "^6.1.1"
 
 [build-system]
 requires = ["poetry-core"]
