--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ types-requests = "^2.30.0.0"
 # Lock pydocstyle to a version lower than 6.2, otherwise the build errors
 # https://github.com/klen/pylama/issues/232
 pydocstyle = "^6.0.0, <6.2.0"
+isort = "^5.12.0"
 
 [build-system]
 requires = ["poetry-core"]
@@ -44,7 +45,18 @@ issues = "https://github.com/Fastjur/F1ScheduleTelegramBot/issues"
 linters = "pycodestyle,pyflakes,mccabe,pylint,radon,mypy,vulture"
 ignore = "D202,D203,D212,W1203"
 # Skip .venv in github actions
-skip = ".venv/*"
+skip = ".venv/*,tests/*"
 
 [tool.vulture]
 min_confidence = 70
+
+[tool.black]
+line-length = 79
+target-version = ["py310"]
+
+[tool.pylint.format]
+max-line-length = 79
+
+[tool.isort]
+profile = "black"
+line_length = 79
