--- a/.github/workflows/pylama-and-docker-build.yml
+++ b/.github/workflows/pylama-and-docker-build.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install python and poetry dependencies
-        uses: ./python-and-poetry/action.yaml
+        uses: ./.github/workflows/python-and-poetry
 
       - name: Run pylama
         run: poetry run pylama
@@ -35,7 +35,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install python and poetry dependencies
-        uses: ./python-and-poetry/action.yaml
+        uses: ./.github/workflows/python-and-poetry
 
       - name: Run pytests
         working-directory: tests
